[gd_scene load_steps=3 format=3 uid="uid://j7l16c7qnrkb"]

[ext_resource type="Script" path="res://Scripts/stats_menu.gd" id="1_rhkql"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rds50"]
bg_color = Color(0.190762, 0.190762, 0.190762, 1)

[node name="StatsMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_rhkql")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rds50")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 274.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 325
alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="InventoryContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="DeliveryContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 276.0
offset_top = 99.0
offset_right = 391.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 48
text = "Stats"

[node name="InventoryLabel" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 820.0
offset_top = 99.0
offset_right = 1044.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 48
text = "Inventory"

[node name="DeliveryLabel" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 1380.0
offset_top = 99.0
offset_right = 1608.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 48
text = "Deliveries"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
